# interview-insight-search

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/eval/: queries.yaml
data/interviews/: int-001.json  int-002.json  int-003.json  int-004.json  int-005.json  int-006.json
src/interview_search/: __init__.py  cli.py  config.py  embeddings.py  evaluate.py  index.py  lexical.py  search.py  synthesize.py  transcripts.py
tests/: test_chunking.py  test_eval.py  test_modes.py  test_retrieval_quality.py  test_search.py  test_synthesize.py
