[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-insight-search"
version = "0.1.0"
description = "Semantic search and grounded insight synthesis over research interview transcripts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anudeep Bonagiri" }]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "fastembed>=0.4",
]

[project.optional-dependencies]
# Claude-grounded synthesis (the `ask` command).
synthesis = ["anthropic>=0.40"]
# Streamlit web UI.
ui = ["streamlit>=1.40"]
dev = ["pytest>=8.0"]
all = ["anthropic>=0.40", "streamlit>=1.40", "pytest>=8.0"]

[project.scripts]
iis = "interview_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
